// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<h3
  className="sc-ewgOdx kGVbCt"
>
  Heading
</h3>
`;

exports[`Caption renders colors 1`] = `
Array [
  <h3
    className="sc-ewgOdx kGVbCt"
  >
    Default color is Bulma
  </h3>,
  <h3
    className="sc-ewgOdx ekIabI"
    color="piccolo.100"
  >
    Piccolo
  </h3>,
  <h3
    className="sc-ewgOdx hfjxoW"
    color="trunks.100"
  >
    Trunks
  </h3>,
  <h3
    className="sc-ewgOdx eXHVgc"
    color="krillin.100"
  >
    Krillin
  </h3>,
]
`;

exports[`Caption renders font-weight 1`] = `
Array [
  <h3
    className="sc-ewgOdx kGVbCt"
  >
    Default font-weight is bold
  </h3>,
  <h3
    className="sc-ewgOdx dOsuec"
  >
    Font-weight is regular
  </h3>,
]
`;

exports[`Caption renders line height 1`] = `
Array [
  <h3
    className="sc-ewgOdx kGVbCt"
  >
    Line-height is pre-calculated
  </h3>,
  <h3
    className="sc-ewgOdx FLeFA"
  >
    Custon line-height
  </h3>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <h3
    className="sc-ewgOdx kGVbCt"
  >
    H3 is a default tag
  </h3>,
  <h2
    className="sc-ewgOdx kGVbCt"
  >
    H2 tag
  </h2>,
  <h6
    className="sc-ewgOdx kGVbCt"
  >
    H6 tag
  </h6>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <h3
    className="sc-ewgOdx kGVbCt"
  >
    Default font-size is 16px
  </h3>,
  <h3
    className="sc-ewgOdx gsvljS"
    size={24}
  >
    Size is 24px
  </h3>,
  <h3
    className="sc-ewgOdx dMzibu"
    size={48}
  >
    Size is 48px
  </h3>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <h3
    className="sc-ewgOdx kGVbCt"
  >
    Text-align is not specified
  </h3>,
  <h3
    className="sc-ewgOdx fTfOkC"
  >
    Centered Heading
  </h3>,
  <h3
    className="sc-ewgOdx EHanl"
  >
    Right alignment
  </h3>,
]
`;

exports[`Caption renders underline 1`] = `
Array [
  <h3
    className="sc-ewgOdx kGVbCt"
  >
    Default text-decoration is none
  </h3>,
  <h3
    className="sc-ewgOdx eplaUo"
  >
    Underline Heading
  </h3>,
]
`;

exports[`Caption renders uppercase 1`] = `
Array [
  <h3
    className="sc-ewgOdx kGVbCt"
  >
    Default text-transform is none
  </h3>,
  <h3
    className="sc-ewgOdx deuCZC"
  >
    Uppercase Heading
  </h3>,
]
`;
